--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flixradar",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://Stella-Achar-Oiro.github.io/flixradar",
   "dependencies": {
     "lucide-react": "^0.263.0",
     "react": "^18.0.0",
@@ -13,7 +14,9 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -29,6 +32,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6"
   }
 }
